MCParser.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.12 from MCParser.y
-----------------------------------------------------------------------------


terminal ':' is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_parse -> Stmt                               (0)
	Stmt -> Expression ';' Stmt                        (1)
	Stmt -> Expression ';'                             (2)
	Stmt -> Selection_Stmt Stmt                        (3)
	Stmt -> Iteration_Stmt Stmt                        (4)
	Stmt -> Selection_Stmt                             (5)
	Stmt -> Iteration_Stmt                             (6)
	Selection_Stmt -> if '(' Expression ')' Compound_Stmt else Compound_Stmt   (7)
	Selection_Stmt -> if '(' Expression ')' Compound_Stmt   (8)
	Selection_Stmt -> try Compound_Stmt catch '(' Exception ')' Compound_Stmt   (9)
	Iteration_Stmt -> while '(' Expression ')' Compound_Stmt   (10)
	Compound_Stmt -> '{' Stmt '}'                      (11)
	Expression -> Operation                            (12)
	Expression -> var '=' Expression                   (13)
	Expression -> var '=' unit                         (14)
	Expression -> Type var                             (15)
	Expression -> print Expression                     (16)
	Expression -> consume Expression                   (17)
	Expression -> streams Expression                   (18)
	Expression -> fst Expression                       (19)
	Expression -> snd Expression                       (20)
	Expression -> return Expression                    (21)
	Expression -> return unit                          (22)
	Expression -> throw Exception                      (23)
	Expression -> lambda '(' Type var ')' '->' Compound_Stmt   (24)
	Expression -> lambda unit '->' Compound_Stmt       (25)
	Operation -> Operation '+' Operation               (26)
	Operation -> Operation '-' Operation               (27)
	Operation -> Operation '<' Operation               (28)
	Operation -> Operation '<=' Operation              (29)
	Operation -> Operation '>' Operation               (30)
	Operation -> Operation '>=' Operation              (31)
	Operation -> Operation '*' Operation               (32)
	Operation -> Operation '%' Operation               (33)
	Operation -> Operation '/' Operation               (34)
	Operation -> Operation '==' Operation              (35)
	Operation -> Operation '!=' Operation              (36)
	Operation -> Operation '||' Operation              (37)
	Operation -> Operation '&&' Operation              (38)
	Operation -> Operation cons Operation              (39)
	Operation -> '-' Operation                         (40)
	Operation -> '!' Operation                         (41)
	Operation -> tail Operation                        (42)
	Operation -> head Operation                        (43)
	Operation -> isEmpty Operation                     (44)
	Operation -> Exp1                                  (45)
	Exp1 -> Exp1 Exp2                                  (46)
	Exp1 -> Exp1 unit                                  (47)
	Exp1 -> Exp2                                       (48)
	Exp2 -> '(' Expression ')'                         (49)
	Exp2 -> quote var quote                            (50)
	Exp2 -> var                                        (51)
	Exp2 -> bool                                       (52)
	Exp2 -> number                                     (53)
	Exp2 -> '(' Expression ',' Expression ')'          (54)
	Exp2 -> '[' ']'                                    (55)
	Exception -> NullPointerException                  (56)
	Exception -> StreamsNotInitialisedException        (57)
	Exception -> NotExistingStreamConsumptionException   (58)
	Exception -> DivideByZeroException                 (59)
	Exception -> TrapException                         (60)
	Exception -> ListEmptyException                    (61)
	Type -> boolT                                      (62)
	Type -> intT                                       (63)
	Type -> void                                       (64)
	Type -> char                                       (65)
	Type -> unit                                       (66)
	Type -> '[' Type ']'                               (67)
	Type -> Type '->' Type                             (68)
	Type -> '(' Type ')'                               (69)
	Type -> '(' Type ',' Type ')'                      (70)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	if             { MkToken _ TokenIf }
	while          { MkToken _ TokenWhile }
	else           { MkToken _ TokenElse }
	'='            { MkToken _ TokenEq }
	'+'            { MkToken _ TokenAdd }
	'{'            { MkToken _ TokenLCurly }
	'}'            { MkToken _ TokenRCurly }
	'['            { MkToken _ TokenLSquare }
	']'            { MkToken _ TokenRSquare }
	'('            { MkToken _ TokenLParen }
	')'            { MkToken _ TokenRParen }
	':'            { MkToken _ TokenColon }
	';'            { MkToken _ TokenSemiColon }
	'<'            { MkToken _ TokenLessThan }
	'>'            { MkToken _ TokenGreaterThan }
	'<='           { MkToken _ TokenLessThanEq }
	'>='           { MkToken _ TokenGreaterThanEq }
	'=='           { MkToken _ TokenLogicalEq }
	'!='           { MkToken _ TokenNotEq }
	'!'            { MkToken _ TokenLogicalNot }
	'&&'           { MkToken _ TokenLogicalAnd }
	'||'           { MkToken _ TokenLogicalOr }
	'/'            { MkToken _ TokenDivide }
	'*'            { MkToken _ TokenMultiply }
	'-'            { MkToken _ TokenSubtract }
	'%'            { MkToken _ TokenModulo }
	','            { MkToken _ TokenComma }
	catch          { MkToken _ TokenCatch }
	try            { MkToken _ TokenTry }
	throw          { MkToken _ TokenThrow }
	number         { MkToken _ (TokenNum $$) }
	intT           { MkToken _ TokenTInt }
	char           { MkToken _ TokenTChar }
	bool           { MkToken _ (TokenBool $$) }
	boolT          { MkToken _ TokenTBool }
	void           { MkToken _ TokenVoid }
	var            { MkToken _ (TokenVar $$) }
	print          { MkToken _ TokenPrint }
	head           { MkToken _ TokenHead }
	tail           { MkToken _ TokenTail }
	isEmpty        { MkToken _ TokenIsEmpty }
	cons           { MkToken _ TokenCons }
	consume        { MkToken _ TokenConsume }
	streams        { MkToken _ TokenInitStreams }
	lambda         { MkToken _ TokenLambda }
	'->'           { MkToken _ TokenArrow }
	unit           { MkToken _ TokenUnit }
	return         { MkToken _ TokenReturn }
	quote          { MkToken _ TokenQuote }
	fst            { MkToken _ TokenFst }
	snd            { MkToken _ TokenSnd }
	NullPointerException{ MkToken _ TokenNPE }
	StreamsNotInitialisedException{ MkToken _ TokenSNIE }
	NotExistingStreamConsumptionException{ MkToken _ TokenNESCE }
	DivideByZeroException{ MkToken _ TokenDBZE }
	TrapException  { MkToken _ TokenTE }
	ListEmptyException{ MkToken _ TokenLEE }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_parse    rule  0
	Stmt            rules 1, 2, 3, 4, 5, 6
	Selection_Stmt  rules 7, 8, 9
	Iteration_Stmt  rule  10
	Compound_Stmt   rule  11
	Expression      rules 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25
	Operation       rules 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45
	Exp1            rules 46, 47, 48
	Exp2            rules 49, 50, 51, 52, 53, 54, 55
	Exception       rules 56, 57, 58, 59, 60, 61
	Type            rules 62, 63, 64, 65, 66, 67, 68, 69, 70

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	if             shift, and enter state 35
	while          shift, and enter state 36
	'['            shift, and enter state 7
	'('            shift, and enter state 8
	'!'            shift, and enter state 9
	'-'            shift, and enter state 10
	try            shift, and enter state 37
	throw          shift, and enter state 11
	number         shift, and enter state 12
	intT           shift, and enter state 13
	char           shift, and enter state 14
	bool           shift, and enter state 15
	boolT          shift, and enter state 16
	void           shift, and enter state 17
	var            shift, and enter state 18
	print          shift, and enter state 19
	head           shift, and enter state 20
	tail           shift, and enter state 21
	isEmpty        shift, and enter state 22
	consume        shift, and enter state 23
	streams        shift, and enter state 24
	lambda         shift, and enter state 25
	unit           shift, and enter state 26
	return         shift, and enter state 27
	quote          shift, and enter state 28
	fst            shift, and enter state 29
	snd            shift, and enter state 30

	Stmt           goto state 31
	Selection_Stmt goto state 32
	Iteration_Stmt goto state 33
	Expression     goto state 34
	Operation      goto state 3
	Exp1           goto state 4
	Exp2           goto state 5
	Type           goto state 6

State 1


	'['            shift, and enter state 7
	'('            shift, and enter state 8
	'!'            shift, and enter state 9
	'-'            shift, and enter state 10
	throw          shift, and enter state 11
	number         shift, and enter state 12
	intT           shift, and enter state 13
	char           shift, and enter state 14
	bool           shift, and enter state 15
	boolT          shift, and enter state 16
	void           shift, and enter state 17
	var            shift, and enter state 18
	print          shift, and enter state 19
	head           shift, and enter state 20
	tail           shift, and enter state 21
	isEmpty        shift, and enter state 22
	consume        shift, and enter state 23
	streams        shift, and enter state 24
	lambda         shift, and enter state 25
	unit           shift, and enter state 26
	return         shift, and enter state 27
	quote          shift, and enter state 28
	fst            shift, and enter state 29
	snd            shift, and enter state 30

	Expression     goto state 2
	Operation      goto state 3
	Exp1           goto state 4
	Exp2           goto state 5
	Type           goto state 6

State 2

	Stmt -> Expression . ';' Stmt                       (rule 1)

	';'            shift, and enter state 95


State 3

	Expression -> Operation .                           (rule 12)
	Operation -> Operation . '+' Operation              (rule 26)
	Operation -> Operation . '-' Operation              (rule 27)
	Operation -> Operation . '<' Operation              (rule 28)
	Operation -> Operation . '<=' Operation             (rule 29)
	Operation -> Operation . '>' Operation              (rule 30)
	Operation -> Operation . '>=' Operation             (rule 31)
	Operation -> Operation . '*' Operation              (rule 32)
	Operation -> Operation . '%' Operation              (rule 33)
	Operation -> Operation . '/' Operation              (rule 34)
	Operation -> Operation . '==' Operation             (rule 35)
	Operation -> Operation . '!=' Operation             (rule 36)
	Operation -> Operation . '||' Operation             (rule 37)
	Operation -> Operation . '&&' Operation             (rule 38)
	Operation -> Operation . cons Operation             (rule 39)

	'+'            shift, and enter state 81
	')'            reduce using rule 12
	';'            reduce using rule 12
	'<'            shift, and enter state 82
	'>'            shift, and enter state 83
	'<='           shift, and enter state 84
	'>='           shift, and enter state 85
	'=='           shift, and enter state 86
	'!='           shift, and enter state 87
	'&&'           shift, and enter state 88
	'||'           shift, and enter state 89
	'/'            shift, and enter state 90
	'*'            shift, and enter state 91
	'-'            shift, and enter state 92
	'%'            shift, and enter state 93
	','            reduce using rule 12
	cons           shift, and enter state 94


State 4

	Operation -> Exp1 .                                 (rule 45)
	Exp1 -> Exp1 . Exp2                                 (rule 46)
	Exp1 -> Exp1 . unit                                 (rule 47)

	'+'            reduce using rule 45
	'['            shift, and enter state 55
	'('            shift, and enter state 56
	')'            reduce using rule 45
	';'            reduce using rule 45
	'<'            reduce using rule 45
	'>'            reduce using rule 45
	'<='           reduce using rule 45
	'>='           reduce using rule 45
	'=='           reduce using rule 45
	'!='           reduce using rule 45
	'&&'           reduce using rule 45
	'||'           reduce using rule 45
	'/'            reduce using rule 45
	'*'            reduce using rule 45
	'-'            reduce using rule 45
	'%'            reduce using rule 45
	','            reduce using rule 45
	number         shift, and enter state 12
	bool           shift, and enter state 15
	var            shift, and enter state 57
	cons           reduce using rule 45
	unit           shift, and enter state 80
	quote          shift, and enter state 28

	Exp2           goto state 79

State 5

	Exp1 -> Exp2 .                                      (rule 48)

	'+'            reduce using rule 48
	'['            reduce using rule 48
	'('            reduce using rule 48
	')'            reduce using rule 48
	';'            reduce using rule 48
	'<'            reduce using rule 48
	'>'            reduce using rule 48
	'<='           reduce using rule 48
	'>='           reduce using rule 48
	'=='           reduce using rule 48
	'!='           reduce using rule 48
	'&&'           reduce using rule 48
	'||'           reduce using rule 48
	'/'            reduce using rule 48
	'*'            reduce using rule 48
	'-'            reduce using rule 48
	'%'            reduce using rule 48
	','            reduce using rule 48
	number         reduce using rule 48
	bool           reduce using rule 48
	var            reduce using rule 48
	cons           reduce using rule 48
	unit           reduce using rule 48
	quote          reduce using rule 48


State 6

	Expression -> Type . var                            (rule 15)
	Type -> Type . '->' Type                            (rule 68)

	var            shift, and enter state 77
	'->'           shift, and enter state 78


State 7

	Exp2 -> '[' . ']'                                   (rule 55)
	Type -> '[' . Type ']'                              (rule 67)

	'['            shift, and enter state 74
	']'            shift, and enter state 75
	'('            shift, and enter state 76
	intT           shift, and enter state 13
	char           shift, and enter state 14
	boolT          shift, and enter state 16
	void           shift, and enter state 17
	unit           shift, and enter state 26

	Type           goto state 73

State 8

	Exp2 -> '(' . Expression ')'                        (rule 49)
	Exp2 -> '(' . Expression ',' Expression ')'         (rule 54)
	Type -> '(' . Type ')'                              (rule 69)
	Type -> '(' . Type ',' Type ')'                     (rule 70)

	'['            shift, and enter state 7
	'('            shift, and enter state 8
	'!'            shift, and enter state 9
	'-'            shift, and enter state 10
	throw          shift, and enter state 11
	number         shift, and enter state 12
	intT           shift, and enter state 13
	char           shift, and enter state 14
	bool           shift, and enter state 15
	boolT          shift, and enter state 16
	void           shift, and enter state 17
	var            shift, and enter state 18
	print          shift, and enter state 19
	head           shift, and enter state 20
	tail           shift, and enter state 21
	isEmpty        shift, and enter state 22
	consume        shift, and enter state 23
	streams        shift, and enter state 24
	lambda         shift, and enter state 25
	unit           shift, and enter state 26
	return         shift, and enter state 27
	quote          shift, and enter state 28
	fst            shift, and enter state 29
	snd            shift, and enter state 30

	Expression     goto state 71
	Operation      goto state 3
	Exp1           goto state 4
	Exp2           goto state 5
	Type           goto state 72

State 9

	Operation -> '!' . Operation                        (rule 41)

	'['            shift, and enter state 55
	'('            shift, and enter state 56
	'!'            shift, and enter state 9
	'-'            shift, and enter state 10
	number         shift, and enter state 12
	bool           shift, and enter state 15
	var            shift, and enter state 57
	head           shift, and enter state 20
	tail           shift, and enter state 21
	isEmpty        shift, and enter state 22
	quote          shift, and enter state 28

	Operation      goto state 70
	Exp1           goto state 4
	Exp2           goto state 5

State 10

	Operation -> '-' . Operation                        (rule 40)

	'['            shift, and enter state 55
	'('            shift, and enter state 56
	'!'            shift, and enter state 9
	'-'            shift, and enter state 10
	number         shift, and enter state 12
	bool           shift, and enter state 15
	var            shift, and enter state 57
	head           shift, and enter state 20
	tail           shift, and enter state 21
	isEmpty        shift, and enter state 22
	quote          shift, and enter state 28

	Operation      goto state 69
	Exp1           goto state 4
	Exp2           goto state 5

State 11

	Expression -> throw . Exception                     (rule 23)

	NullPointerExceptionshift, and enter state 63
	StreamsNotInitialisedExceptionshift, and enter state 64
	NotExistingStreamConsumptionExceptionshift, and enter state 65
	DivideByZeroExceptionshift, and enter state 66
	TrapException  shift, and enter state 67
	ListEmptyExceptionshift, and enter state 68

	Exception      goto state 62

State 12

	Exp2 -> number .                                    (rule 53)

	'+'            reduce using rule 53
	'['            reduce using rule 53
	'('            reduce using rule 53
	')'            reduce using rule 53
	';'            reduce using rule 53
	'<'            reduce using rule 53
	'>'            reduce using rule 53
	'<='           reduce using rule 53
	'>='           reduce using rule 53
	'=='           reduce using rule 53
	'!='           reduce using rule 53
	'&&'           reduce using rule 53
	'||'           reduce using rule 53
	'/'            reduce using rule 53
	'*'            reduce using rule 53
	'-'            reduce using rule 53
	'%'            reduce using rule 53
	','            reduce using rule 53
	number         reduce using rule 53
	bool           reduce using rule 53
	var            reduce using rule 53
	cons           reduce using rule 53
	unit           reduce using rule 53
	quote          reduce using rule 53


State 13

	Type -> intT .                                      (rule 63)

	']'            reduce using rule 63
	')'            reduce using rule 63
	','            reduce using rule 63
	var            reduce using rule 63
	'->'           reduce using rule 63


State 14

	Type -> char .                                      (rule 65)

	']'            reduce using rule 65
	')'            reduce using rule 65
	','            reduce using rule 65
	var            reduce using rule 65
	'->'           reduce using rule 65


State 15

	Exp2 -> bool .                                      (rule 52)

	'+'            reduce using rule 52
	'['            reduce using rule 52
	'('            reduce using rule 52
	')'            reduce using rule 52
	';'            reduce using rule 52
	'<'            reduce using rule 52
	'>'            reduce using rule 52
	'<='           reduce using rule 52
	'>='           reduce using rule 52
	'=='           reduce using rule 52
	'!='           reduce using rule 52
	'&&'           reduce using rule 52
	'||'           reduce using rule 52
	'/'            reduce using rule 52
	'*'            reduce using rule 52
	'-'            reduce using rule 52
	'%'            reduce using rule 52
	','            reduce using rule 52
	number         reduce using rule 52
	bool           reduce using rule 52
	var            reduce using rule 52
	cons           reduce using rule 52
	unit           reduce using rule 52
	quote          reduce using rule 52


State 16

	Type -> boolT .                                     (rule 62)

	']'            reduce using rule 62
	')'            reduce using rule 62
	','            reduce using rule 62
	var            reduce using rule 62
	'->'           reduce using rule 62


State 17

	Type -> void .                                      (rule 64)

	']'            reduce using rule 64
	')'            reduce using rule 64
	','            reduce using rule 64
	var            reduce using rule 64
	'->'           reduce using rule 64


State 18

	Expression -> var . '=' Expression                  (rule 13)
	Expression -> var . '=' unit                        (rule 14)
	Exp2 -> var .                                       (rule 51)

	'='            shift, and enter state 61
	'+'            reduce using rule 51
	'['            reduce using rule 51
	'('            reduce using rule 51
	')'            reduce using rule 51
	';'            reduce using rule 51
	'<'            reduce using rule 51
	'>'            reduce using rule 51
	'<='           reduce using rule 51
	'>='           reduce using rule 51
	'=='           reduce using rule 51
	'!='           reduce using rule 51
	'&&'           reduce using rule 51
	'||'           reduce using rule 51
	'/'            reduce using rule 51
	'*'            reduce using rule 51
	'-'            reduce using rule 51
	'%'            reduce using rule 51
	','            reduce using rule 51
	number         reduce using rule 51
	bool           reduce using rule 51
	var            reduce using rule 51
	cons           reduce using rule 51
	unit           reduce using rule 51
	quote          reduce using rule 51


State 19

	Expression -> print . Expression                    (rule 16)

	'['            shift, and enter state 7
	'('            shift, and enter state 8
	'!'            shift, and enter state 9
	'-'            shift, and enter state 10
	throw          shift, and enter state 11
	number         shift, and enter state 12
	intT           shift, and enter state 13
	char           shift, and enter state 14
	bool           shift, and enter state 15
	boolT          shift, and enter state 16
	void           shift, and enter state 17
	var            shift, and enter state 18
	print          shift, and enter state 19
	head           shift, and enter state 20
	tail           shift, and enter state 21
	isEmpty        shift, and enter state 22
	consume        shift, and enter state 23
	streams        shift, and enter state 24
	lambda         shift, and enter state 25
	unit           shift, and enter state 26
	return         shift, and enter state 27
	quote          shift, and enter state 28
	fst            shift, and enter state 29
	snd            shift, and enter state 30

	Expression     goto state 60
	Operation      goto state 3
	Exp1           goto state 4
	Exp2           goto state 5
	Type           goto state 6

State 20

	Operation -> head . Operation                       (rule 43)

	'['            shift, and enter state 55
	'('            shift, and enter state 56
	'!'            shift, and enter state 9
	'-'            shift, and enter state 10
	number         shift, and enter state 12
	bool           shift, and enter state 15
	var            shift, and enter state 57
	head           shift, and enter state 20
	tail           shift, and enter state 21
	isEmpty        shift, and enter state 22
	quote          shift, and enter state 28

	Operation      goto state 59
	Exp1           goto state 4
	Exp2           goto state 5

State 21

	Operation -> tail . Operation                       (rule 42)

	'['            shift, and enter state 55
	'('            shift, and enter state 56
	'!'            shift, and enter state 9
	'-'            shift, and enter state 10
	number         shift, and enter state 12
	bool           shift, and enter state 15
	var            shift, and enter state 57
	head           shift, and enter state 20
	tail           shift, and enter state 21
	isEmpty        shift, and enter state 22
	quote          shift, and enter state 28

	Operation      goto state 58
	Exp1           goto state 4
	Exp2           goto state 5

State 22

	Operation -> isEmpty . Operation                    (rule 44)

	'['            shift, and enter state 55
	'('            shift, and enter state 56
	'!'            shift, and enter state 9
	'-'            shift, and enter state 10
	number         shift, and enter state 12
	bool           shift, and enter state 15
	var            shift, and enter state 57
	head           shift, and enter state 20
	tail           shift, and enter state 21
	isEmpty        shift, and enter state 22
	quote          shift, and enter state 28

	Operation      goto state 54
	Exp1           goto state 4
	Exp2           goto state 5

State 23

	Expression -> consume . Expression                  (rule 17)

	'['            shift, and enter state 7
	'('            shift, and enter state 8
	'!'            shift, and enter state 9
	'-'            shift, and enter state 10
	throw          shift, and enter state 11
	number         shift, and enter state 12
	intT           shift, and enter state 13
	char           shift, and enter state 14
	bool           shift, and enter state 15
	boolT          shift, and enter state 16
	void           shift, and enter state 17
	var            shift, and enter state 18
	print          shift, and enter state 19
	head           shift, and enter state 20
	tail           shift, and enter state 21
	isEmpty        shift, and enter state 22
	consume        shift, and enter state 23
	streams        shift, and enter state 24
	lambda         shift, and enter state 25
	unit           shift, and enter state 26
	return         shift, and enter state 27
	quote          shift, and enter state 28
	fst            shift, and enter state 29
	snd            shift, and enter state 30

	Expression     goto state 53
	Operation      goto state 3
	Exp1           goto state 4
	Exp2           goto state 5
	Type           goto state 6

State 24

	Expression -> streams . Expression                  (rule 18)
